test/classes/deitz/inherit-class-record/inherit_mod3.good
inherit_mod3.chpl:11: In function 'foo':
inherit_mod3.chpl:12: error: unresolved call 'C.x'
inherit_mod3.chpl:4: note: this candidate did not match: D1.x
inherit_mod3.chpl:12: note: because method call receiver with type 'borrowed C'
inherit_mod3.chpl:4: note: is passed to formal 'this: borrowed D1'
inherit_mod3.chpl:12: note: other candidates are:
inherit_mod3.chpl:8: note:   D2.x
